Adding the Updated HTML

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Indigenous Languages and Population Dashboard — Mini Dashboard</title>
+  <title>Indigenous Languages in Australia — Mini Dashboard</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-
+  <!-- Vega libraries (CDN) -->
   <script src="https://cdn.jsdelivr.net/npm/vega@5"></script>
   <script src="https://cdn.jsdelivr.net/npm/vega-lite@5"></script>
   <script src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
@@ -13,8 +13,8 @@
 <body>
   <main class="container">
     <header>
-      <h1>Indigenous Languages and Population Dashboard</h1>
-      <p class="subtitle">A visual exploration of Indigenous language distribution, usage trends, and population growth (1991–2021)</p>
+      <h1>Indigenous Languages in Australia</h1>
+      <p class="subtitle">Indigenous Languages Across Australia + Language use over time (1991–2021)</p>
     </header>
 
     <section class="card">
@@ -40,19 +40,6 @@ Overall, the visual highlights a north-to-south decline in language density, und
   in daily communication and highlights the importance of ongoing language
   revitalisation efforts for Aboriginal and Torres Strait Islander communities.
 </p>
-    </section>
-
-   
-    <section class="card">
-      <h2>Aboriginal & Torres Strait Islander Population (2011–2021)</h2>
-      <div id="population-bar" class="viz"></div>
-      <p class="insight">
-        <strong>Insight:</strong> The Aboriginal and Torres Strait Islander population grew from
-        <strong>806,090</strong> in <strong>2011</strong> to <strong>983,709</strong> in <strong>2021</strong> —
-        an increase of about <strong>177,619</strong> people (~<strong>22%</strong>). Growth is steady year-over-year
-        (no declines), averaging roughly <strong>~17.7k</strong> additional people per year, with the largest
-        annual jump between 2011 and 2012.
-      </p>
     </section>
   </main>
 
